# mst

./: .gitignore
Slides/examples/: registers.cpp
arduino/: CMakeLists.txt  main.cpp
cmake/Platform/Targets/: ArduinoLibraryTarget.cmake
pc/: CMakeLists.txt  main.cpp
stm32/: CMakeLists.txt  STM32F746NGHX_FLASH.ld  STM32F746NGHX_RAM.ld
stm32/Src/: bitfield_c_like.cpp  bitfield_meta.cpp  bitfield_or_meta.cpp  empty.cpp  led_c_like.cpp  led_meta.cpp  led_soft_pwm.cpp  led_soft_pwm_strong.cpp  led_soft_pwm_strong2.cpp  main.cpp  register_c_like.cpp  register_playground.cpp
stm32/Startup/: startup_stm32f746nghx.s
tests/: CMakeLists.txt
tests/registers_and_fields/: CMakeLists.txt  main.cpp
ucpp/: gpio.hpp  peripherals_tags.hpp  register.hpp  spi.hpp  strong_ops.hpp  strong_types.hpp  utils.hpp
ucpp/codec/: vs1002.hpp
ucpp/sdcard/: commands.hpp  sdcard.hpp
ucpp/stm32/: Rerister_generator.ipynb  dma-regs.hpp  dma.hpp  flash-regs.hpp  gpio-regs.hpp  gpio.hpp  no_tag-regs.hpp  pwr-regs.hpp  rcc-regs.hpp  rcc.hpp  scb-regs.hpp  sdmmc-regs.hpp  sdmmc.hpp  spi-regs.hpp  spi.hpp  stm32f7.hpp
